# penumbra-overture-coop

./: .gitignore  README.md
HPL1Engine/: CMakeLists.txt  HPL.sln  HPL.vcproj
HPL1Engine/assets/fonts/: test.lang  viewer.fnt
HPL1Engine/assets/maps/: maptest2.dae
HPL1Engine/assets/models/: TestParticle.ps  boxtest.mat  hinge_test.ent  joint2.dae  mine_barrel.ent  mine_barrel.mat  misc_rect.mat  smallball.mat  test_door01.ent  woodbox.ent
HPL1Engine/assets/textures/: LightFP.cg  LightVP.cg  PostEffectFP.cg  SimpleFP.cg  SimpleVP.cg  fire.ps  fireparticle.mat  floor.mat  light_player_flashlight_spot.lnt  material_floor.mat  material_metal11.mat  metal.mat  misc_flare.mat  misc_flare2.mat  splat3.mat  spotbeam.mat  test.mat  test01.beam  test_halo_flare.mat  test_halo_flare2.mat  testar.mat  transperant01.mat  transperant02.mat  transperant03.mat
HPL1Engine/include/impl/: LowLevelGraphicsSDL.h  MeshLoaderCollada.h
HPL1Engine/sources/game/: ScriptFuncs.cpp
HPL1Engine/sources/graphics/: AnimationTrack.cpp  SubMesh.cpp
HPL1Engine/sources/impl/: LowLevelGraphicsSDL.cpp  LowLevelSoundOpenAL.cpp  MeshLoaderCollada.cpp  MeshLoaderColladaHelpers.cpp  MeshLoaderColladaLoader.cpp  SDLGameSetup.cpp
HPL1Engine/sources/math/: Math.cpp
HPL1Engine/sources/scene/: MeshEntity.cpp  SubMeshEntity.cpp
HPL1Engine/tests/GuiTest/: GuiTest.sln  GuiTest.vcproj
HPL1Engine/tests/PhysicsTest/: PhysicsTest.sln  PhysicsTest.vcproj
HPL1Engine/tests/RenderTest/: RenderTest.sln  RenderTest.vcproj
HPL1Engine/tests/SceneTest/: SceneTest.sln  SceneTest.vcproj
HPL1Engine/tests/SerializeTest/: SerializeTest.sln  SerializeTest.vcproj
HPL1Engine/tests/SpotLightTest/: SpotLightTest.sln  SpotLightTest.vcproj
HPL1Engine/tests/VideoTest/: VideoTest.sln  VideoTest.vcproj
HPL1Engine/tools/HplHelper/: HplHelper.csproj  HplHelper.sln  MainForm.resx
HPL1Engine/tools/HudObjectEditor/: HudObjectEditor.sln  HudObjectEditor.vcproj
HPL1Engine/tools/MapEditor/: AreaForm.resx  EditLayerForm.resx  Form1.resx  Form2.resx  LayerForm.resx  LightForm.resx  MapPropForm.resx  Mapeditor.csproj  Mapeditor.sln  MiniMapForm.resx  NewMapForm.resx  ParticleForm.resx  PropForm.resx  PropertiesAreaForm.resx  PropertiesLightForm.resx  PropertiesParticleForm.resx  PropertiesPropForm.resx  PropertiesSoundForm.resx  SoundForm.resx
HPL1Engine/tools/ModelViewer/: ModelViewer.sln  ModelViewer.vcproj
HPL1Engine/tools/ParticleEditor/: Form1.resx  ParticleEditor.csproj  ParticleEditor.sln
HPL1Engine/tools/ParticleViewer/: ParticleViewer.sln  ParticleViewer.vcproj
HPL1Engine/tools/SceneViewer/: SceneViewer.sln  SceneViewer.vcproj
Overture/: .gitignore  ButtonHandler.cpp  CMakeLists.txt  GameEnemy.cpp  GameEnemy.h  GameEnemy_Dog.cpp  GameEntity.cpp  GameItem.cpp  GameScripts.cpp  GameScripts.h  Init.cpp  Init.h  Inventory.cpp  MainMenu.cpp  MainMenu.h  MapHandler.cpp  Penumbra.sln  Penumbra.vcproj  Penumbra.vcxproj  PlayerState_Interact.cpp  PlayerState_Interact.h  UpgradeLog.htm  overture.rc  vcpkg.json
Overture/multiplayer/: BodySync.cpp  BodySync.h  GhostPlayer.cpp  GhostPlayer.h  NetworkManager.cpp  NetworkManager.h  NetworkPackets.h  README.md  multiplayer.cfg.example
Overture/multiplayer/models/: malik.dae  malik.mat  malik_crouch_idle.dae  malik_crouch_to_stand.dae  malik_crouch_walk.dae  malik_idle.dae  malik_jump.dae  malik_stand_to_crouch.dae  malik_strafe_run_l.dae  malik_strafe_walk_l.dae  malik_strafe_walk_r.dae  malik_turn_l.dae  malik_turn_r.dae  malik_walk_back.dae  phillip.dae  phillip.mat  phillip_crouch_idle.dae  phillip_crouch_to_stand.dae  phillip_crouch_walk.dae  phillip_idle.dae  phillip_jump.dae  phillip_stand_to_crouch.dae  phillip_strafe_run_r.dae  phillip_strafe_walk_l.dae  phillip_strafe_walk_r.dae  phillip_turn_l.dae  phillip_turn_r.dae  phillip_walk_back.dae
Overture/multiplayer/tools/: hpl_dae_export.py  make_static_dae.py  retarget_clip_dae.py
